# loggboken

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  loggboken-plugin.md  pyproject.toml  start-loggboken.sh
.claude/: settings.local.json
.gitlab/ci/: kubernetes-snapshot.yml
app/: auth.py  config.py  db.py  deps.py  diffing.py  errors.py  ingestion.py  main.py  middleware.py
app/api/v1/: artifacts.py  environments.py  (+2 more)
app/parsers/: base.py  kubectl_describe.py  kubernetes.py  registry.py  rpm.py
app/repositories/: artifacts.py  environments.py  ingestion_failures.py  installations.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  types.ts
k8s/: README.md  app-deployment.yaml  app-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  migration-job.yaml  namespace.yaml  secret.example.yaml
migrations/: env.py
migrations/versions/: 67febf480812_environment_uniqueness_and_snapshot_lock.py  6a87e6013330_initial_schema.py  93b222cf4fbc_ingestion_failures_table.py
scripts/: seed.py
scripts/examples/: kubernetes_snapshot.sh
tests/integration/: conftest.py  test_auth.py  test_concurrency.py  test_environment_prefix_and_diff.py  test_error_handling.py  test_health.py  test_ingestion.py  test_queries.py  test_search_installations.py  test_snapshot.py
tests/unit/: test_auth.py  test_diffing.py  test_ingestion_logic.py  test_middleware.py
(+21 files in other folders)
